2005-07-01  David Gilbert  <david.gilbert@object-refinery.com>

	* java/awt/RenderingHints.java: API doc updates.

2005-07-01  Mark Wielaard  <mark@klomp.org>

	* doc/www.gnu.org/announce/20050630.wml: New file.
	* doc/www.gnu.org/newsitems.txt: Add announcement.
	* doc/www.gnu.org/downloads/downloads.wml: Add 0.16 download.

2005-07-01  Roman Kennke  <roman@kennke.org>

	* gnu/classpath/ObjectPool.java:
	Removed this class. Some simple benchmarks show that it
	brings not much gain and actually decreases performance
	speed-wise.

2005-07-01  Chris Burdess  <dog@gnu.org>

	* gnu/xml/dom/DomNode.java,
	gnu/xml/dom/html2/DomHTMLCollection.java,
	gnu/xml/dom/html2/DomHTMLElement.java,
	gnu/xml/dom/html2/DomHTMLTableElement.java,
	gnu/xml/dom/html2/DomHTMLTableRowElement.java,
	gnu/xml/dom/html2/DomHTMLTableSectionElement.java,
	gnu/xml/transform/NodeNumberNode.java,
	gnu/xml/transform/Stylesheet.java,
	gnu/xml/transform/TemplateNode.java,
	gnu/xml/xpath/NameTest.java,
	gnu/xml/xpath/NamespaceTest.java: Corrections for cases where
	elements/attributes might have been created in non-namespace-aware mode.
	* gnu/xml/transform/StreamSerializer.java: Only apply HTML attribute
	reduction when attribute is defined as a boolean in the HTML DTD.
	* gnu/xml/transform/TransformerImpl.java: Add support for output indenting
	and cdata-section-elements output instruction.

2005-07-01  Roman Kennke  <roman@kennke.org>

	* gnu/classpath/ObjectPool.java:
	Introduced flag for turning on/off caching.
	(getInstance): Synchronized access to this method.
	(borrowObject): Synchronized access to the pool.
	Added some benchmarking statements.
	(returnObject): Synchronized access to the pool.
	Added some benchmarking statements.
	(createObject): Synchronized access to the pool.
	Added some benchmarking statements.
	(printStats): New method. Prints out some stats about the pool usage.

2005-07-01  David Gilbert  <david.gilbert@object-refinery.com>
